crates/tracexec-tui/src/snapshots/tracexec_tui__hit_manager__tests__snapshot_hit_manager_help_popup.snap
---
source: crates/tracexec-tui/src/hit_manager.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 18 },
    content: [
        "           ┌──────────────────────────Help──────────────────────────┐           ",
        "           │The Hit Manager shows the processes that hit breakpoints│           ",
        "           │and become stopped by tracexec. A process can stop at   │           ",
        "           │syscall-enter(right before exec) or syscall-exit(right  │           ",
        "           │after exec).                                            │           ",
        "           │By default, tracexec uses seccomp-bpf to speed up ptrace│           ",
        "           │operations so that there is minimal overhead when       │           ",
        "           │running programs inside tracexec. However, this comes   │           ",
        "           │with a limitation that detached tracees and their       │           ",
        "           │children will not be able to use execve{,at} syscall.   │           ",
        "           │Usually it is shown as the following error: Function not│           ",
        "           │implemented. To workaround this problem, run tracexec   │           ",
        "           │with --seccomp-bpf=off flag.                            │           ",
        "           │You can detach, resume or detach and launch external    │           ",
        "           │commands for the stopped processes. The {{PID}}         │           ",
        "           │parameter in the external command will be replaced with │           ",
        "           │the PID of the detached and stopped process. For        │           ",
        "           └────────────────────────────────────────────────────────┘           ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 0, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Cyan, bg: White, underline: Reset, modifier: BOLD,
        x: 44, y: 3, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 48, y: 3, fg: Cyan, bg: White, underline: Reset, modifier: BOLD,
        x: 66, y: 3, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 4, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: Cyan, bg: White, underline: Reset, modifier: BOLD,
        x: 23, y: 4, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 5, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 6, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 7, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 46, y: 7, fg: Red, bg: White, underline: Reset, modifier: NONE,
        x: 65, y: 7, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 8, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Red, bg: White, underline: Reset, modifier: NONE,
        x: 61, y: 8, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 9, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Red, bg: White, underline: Reset, modifier: NONE,
        x: 65, y: 9, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 10, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: Red, bg: White, underline: Reset, modifier: NONE,
        x: 56, y: 10, fg: LightRed, bg: White, underline: Reset, modifier: BOLD,
        x: 68, y: 10, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 11, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 12, y: 11, fg: LightRed, bg: White, underline: Reset, modifier: BOLD,
        x: 23, y: 11, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Yellow, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 34, y: 12, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 13, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 14, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 52, y: 14, fg: Cyan, bg: White, underline: Reset, modifier: BOLD,
        x: 59, y: 14, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 15, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 16, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 17, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
