crates/tracexec-tui/src/snapshots/tracexec_tui__hit_manager__tests__snapshot_hit_manager_no_default_command.snap
---
source: crates/tracexec-tui/src/hit_manager.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 70, height: 12 },
    content: [
        "                                                                      ",
        "default command not set. Press  E  to set                             ",
        "┌─────────────────────────── Hit Manager ────────────────────────────┐",
        "│4321 hit breakpoint #0(in-filename:/bin/echo) at SyscallExit        │",
        "│                                                                    │",
        "│                                                                    │",
        "│                                                                    │",
        "│                                                                    │",
        "│                                                                    │",
        "│                                                                    │",
        "│                                                                    │",
        "└────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: LightYellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 1, fg: Black, bg: Cyan, underline: Reset, modifier: BOLD,
        x: 34, y: 1, fg: LightYellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: LightMagenta, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 5, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 6, y: 3, fg: White, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 9, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 10, y: 3, fg: White, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 23, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 24, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 45, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 47, y: 3, fg: White, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 49, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 50, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 61, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
